--- a/.env.ci
+++ b/.env.ci
@@ -25,9 +25,9 @@ LOG_LEVEL=debug
 
 # 👉 Disesuaikan untuk GitHub Actions MySQL service
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=management
 DB_USERNAME=root
 DB_PASSWORD=root
 
