--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -1,4 +1,5 @@
 name: Laravel CI
+
 on:
   push:
     branches: [ "main" ]
@@ -14,17 +15,19 @@ jobs:
         image: mysql:8
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: management   # <-- pastikan sama dengan DB_DATABASE di .env.ci
+          MYSQL_DATABASE: management
         options: >-
-          --health-cmd="mysqladmin ping --silent -uroot -proot"
+          --health-cmd="mysqladmin ping -h mysql -uroot -proot"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup PHP
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -32,42 +35,55 @@ jobs:
           extensions: mbstring, bcmath, pdo_mysql
           coverage: none
 
+      # 3️⃣ Install Composer dependencies
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --no-interaction --optimize-autoloader
 
+      # 4️⃣ Copy CI env
       - name: Copy CI env
         run: cp .env.ci .env
-        # Pastikan .env.ci sudah ada di root repo dan DB_HOST di .env.ci = mysql
 
+      # 5️⃣ Generate app key
       - name: Generate app key
         run: php artisan key:generate --ansi
 
-      - name: Wait for MySQL to be ready
+      # 6️⃣ Wait for MySQL (letakkan di sini)
+      - name: Wait for MySQL
         run: |
           echo "Waiting for MySQL (mysql:3306) to be ready..."
-          # loop until PHP can connect to the DB using the CI credentials
-          until php -r 'try{ new PDO("mysql:host=mysql;port=3306;dbname=management","root","root"); exit(0);} catch (Exception $e) { exit(1); }'; do
-            echo "MySQL not ready yet - sleeping 2s..."
-            sleep 2
+          retries=20
+          until mysqladmin ping -hmysql -uroot -proot --silent || [ $retries -le 0 ]; do
+            echo "MySQL not ready yet - sleeping 5s..."
+            sleep 5
+            retries=$((retries-1))
           done
+          if [ $retries -le 0 ]; then
+            echo "MySQL failed to start"
+            exit 1
+          fi
           echo "MySQL is ready."
 
-      - name: Storage link (optional)
+      # 7️⃣ Storage link
+      - name: Storage link
         run: php artisan storage:link || true
 
+      # 8️⃣ Run migrations
       - name: Run migrations
         run: php artisan migrate --force
-
+      # 9️⃣ Run tests
       - name: Run tests
         run: php artisan test --testsuite=Feature || php artisan test
 
+      # 🔟 Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
+      # 1️⃣1️⃣ Install Node dependencies
       - name: Install Node dependencies
         run: npm ci
 
+      # 1️⃣2️⃣ Build frontend
       - name: Build frontend
         run: npm run build
