chore: update Laravel CI workflow, perbaikan file PHPCS, hapus tunnel logs & skrip lama

--- a/.env.ci
+++ b/.env.ci
@@ -25,7 +25,7 @@ LOG_LEVEL=debug
 
 # 👉 Disesuaikan untuk GitHub Actions MySQL service
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=management
 DB_USERNAME=root
