--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -131,4 +131,4 @@ jobs:
           DB_DATABASE: management
           DB_USERNAME: root
           DB_PASSWORD: root
-        run: php artisan test --stop-on-failure --verbose
+        run: php artisan test --stop-on-failure
