--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -123,7 +123,8 @@ jobs:
       - name: Copy CI environment
         run: cp .env.ci .env
 
-      - name: Run Laravel Tests
+      # ✅ Jalankan PHPUnit langsung agar bisa pakai -v
+      - name: Run Laravel Tests (Verbose)
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
@@ -131,4 +132,4 @@ jobs:
           DB_DATABASE: management
           DB_USERNAME: root
           DB_PASSWORD: root
-        run: php artisan test --stop-on-failure -v
+        run: vendor/bin/phpunit --stop-on-failure -v
