--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -124,7 +124,7 @@ jobs:
         run: cp .env.ci .env
 
       # ✅ Jalankan PHPUnit langsung agar bisa pakai -v
-      - name: Run Laravel Tests (Verbose)
+      - name: Run Laravel Tests (TestDox)
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
@@ -132,4 +132,4 @@ jobs:
           DB_DATABASE: management
           DB_USERNAME: root
           DB_PASSWORD: root
-        run: vendor/bin/phpunit --stop-on-failure -v
+        run: vendor/bin/phpunit --stop-on-failure --testdox
