--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -1,6 +1,6 @@
 name: Laravel CI/CD - management_apk
 
-# 🔹 Workflow berjalan saat push ke branch main
+# 🔹 Workflow jalan saat push ke branch main
 on:
   push:
     branches: [ "main" ]
@@ -72,7 +72,7 @@ jobs:
   cd:
     name: Deploy to Hostinger
     runs-on: ubuntu-latest
-    needs: ci # hanya jalan jika CI sukses
+    needs: ci # hanya jalan kalau CI sukses
 
     steps:
       - uses: actions/checkout@v4
@@ -80,20 +80,21 @@ jobs:
       - name: Deploy to Hostinger via SSH
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}
+          host: 145.223.108.62
+          username: u943606636
           key: ${{ secrets.HOSTINGER_SSH_KEY }}
-          port: 65002 # sesuaikan panel Hostinger
+          port: 65002
           script: |
             #!/bin/bash
             set -e
 
-            # Masuk ke folder project
+            echo "🚀 Mulai deployment ke Hostinger..."
+
             cd ~/public_html
 
             # Tarik update terbaru dari repo
             if [ ! -d ".git" ]; then
-              git clone https://github.com/indopinetmart/management_apk.git .
+              git clone git@github.com:indopinetmart/management_apk.git .
             else
               git fetch origin main
               git reset --hard origin/main
@@ -123,16 +124,20 @@ jobs:
             # Jalankan migration production
             php artisan migrate --force
 
-            # Build asset front-end (Vite)
-            npm install
-            npm run build
+            # Build asset front-end (Vite) jika Node.js tersedia
+            if command -v npm > /dev/null 2>&1; then
+              npm install
+              npm run build
+            else
+              echo "⚠️ Node.js tidak ada di server, build asset sebaiknya di GitHub Actions"
+            fi
 
             # Set permission storage & bootstrap/cache
-            chmod -R 775 storage bootstrap/cache
+            chmod -R 755 storage bootstrap/cache
 
             # Restart queue worker jika ada
             if php artisan queue:status > /dev/null 2>&1; then
               php artisan queue:restart
             fi
 
-            echo "✅ Deployment selesai di Hostinger"
+            echo "✅ Deployment selesai di Hostinger 🎉"
